# Taskmaster

./: .gitignore  42.yaml  CMakeLists.txt  LineEdit.cpp  LineEdit.h  Taskmaster.h  auther  config.yaml  defines.h  main.cpp  program.cpp  program.h  sample.conf
includes/: LineEdit.h  Taskmaster.h  defines.h  odds.h  program.h
src/: main.cpp  program.cpp
srcs/: LineEdit.cpp  controller.cpp  engine.cpp  exit.cpp  help.cpp  initProcecces.cpp  log.cpp  main.cpp  odds.cpp  program.cpp  restart.cpp  shutdown.cpp  start.cpp  status.cpp  stop.cpp
